# Selenium-MCP-server

./: .gitignore  README.md  logger.py  openai_client.py  pyproject.toml  server.py  simple_openai_client.py  tool_client.py
